k8s-manifests/stand-with-dorayaki-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stand-with-dorayaki-be
  namespace: swd
spec:
  selector:
    matchLabels:
      app: stand-with-dorayaki-be
  template:
    metadata:
      labels:
        app: stand-with-dorayaki-be
    spec:
      containers:
        - name: stand-with-dorayaki-be
          image: kadeksuryam/stand-with-dorayaki-be:v1.3.1
          volumeMounts:
            - name: gcp-creds
              mountPath: /var/secrets/gcp-creds
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      volumes:
        - name: gcp-creds
          secret:
            secretName: swd-be-gcloud-creds
            items:
              - key: project-1-dorayaki-bucket-access.json
                path: creds.json
  revisionHistoryLimit: 0
