k8s-manifests/stand-with-dorayaki-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swd-be-service
  namespace: swd
spec:
  selector:
    app: stand-with-dorayaki-be
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 8080
